# my_component_package

./: .devcontainer.json  .gitignore  aica-package.toml  app.yaml
.devcontainer/: devcontainer.json
source/my_custom_package/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg
source/my_custom_package/component_descriptions/: camera_test.json  my_custom_package_cpp_component.json  my_custom_package_cpp_lifecycle_component.json  my_custom_package_creality_interface.json  my_custom_package_creality_interface_1.json  my_custom_package_piece_detection.json  my_custom_package_py_MoveToPosition.json  my_custom_package_py_component.json  my_custom_package_py_lifecycle_component.json  my_custom_package_tcp_server.json  test.json
source/my_custom_package/component_descriptions/my_custom_package/: CMakeLists.txt  package.xml  requirements.txt
source/my_custom_package/component_descriptions/my_custom_package/component_descriptions/: camera_test.json  my_custom_package_creality_interface.json  my_custom_package_py_component.json  my_custom_package_py_lifecycle_component.json  test.json
source/my_custom_package/include/my_custom_package/: CPPComponent.hpp  CPPLifecycleComponent.hpp
source/my_custom_package/meshes/: UTF-8table.stl
source/my_custom_package/my_custom_package/: camera_test.py  creality_interface.py  creality_interface_1.py  piece_detection copy.py  piece_detection.py  piece_detection_base.py  py_component.py  tcp_server.py  test.py
source/my_custom_package/src/: CPPComponent.cpp  CPPLifecycleComponent.cpp
source/my_custom_package/test/cpp_tests/: test_cpp_component.cpp  test_cpp_lifecycle_component.cpp
source/my_custom_package/test/python_tests/: test_py_component.py  test_py_lifecycle_component.py
(+10 files in other folders)
