[options.entry_points]
python_components =
    # register Python components
    my_custom_package::PyComponent = my_custom_package.py_component:PyComponent
    my_custom_package::PyLifecycleComponent = my_custom_package.py_lifecycle_component:PyLifecycleComponent
    move_to_position_package::MoveToPosition = my_custom_package.test:MoveToPositionComponent
    realsense_camera_processing::RealSenseComponent = my_custom_package.camera_test:RealSenseComponent
