[options.entry_points]
python_components =
    # register Python components
    my_custom_package::PyComponent = my_custom_package.py_component:PyComponent
    my_custom_package::PyLifecycleComponent = my_custom_package.py_lifecycle_component:PyLifecycleComponent
    my_custom_package::MoveToPosition = my_custom_package.test:MoveToPositionComponent
    my_custom_package::CrealityInterface = my_custom_package.creality_interface:CrealityInterface
    my_custom_package::CrealityInterface_1 = my_custom_package.creality_interface_1:CrealityInterface_1
    realsense_camera_processing::RealSenseComponent = my_custom_package.camera_test:RealSenseComponent
    my_custom_package::PieceDetection = my_custom_package.piece_detection:PieceDetectionComponent