[options.entry_points]
python_components =
    # register Python components
    my_custom_package::CrealityInterface = my_custom_package.creality_interface:CrealityInterface
    my_custom_package::PieceDetection = my_custom_package.piece_detection:PieceDetectionComponent
    my_custom_package::TcpServer = my_custom_package.tcp_server:TcpServer